# kuppa

./: Bootcamp_0_2_hero.py  pyproject.toml  testing_50.py  tic_tac_toe.py  trying_Jupyter.ipynb  tryoput.py
DataMart/: CreateTable.py
TestScript/: Bootcamp_03_hero.py  FakeNews_DS.py  NewCollector.py  dt_caller.py  panda_index_date.py  tamilrockers.py  tic_tac_toe.py
kathuko/: Learner.py  pyspark_try.py
