[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Sathish G <sathish3129@live.com>"]
description = ""
name = "afraidscratchywrapper"
version = "0.1.0"
[tool.poetry.dependencies]
numpy = "^1.18"
python = "^3.7"
pandas = "^1.0"
[tool.poetry.dev-dependencies]
